# edi-agent-demo

./: .amplifyrc  .dockerignore  .env.edicraft.example  .env.example  .env.local.backup.20251028_134347  .env.local.example  .eslintrc.json  .flake8  .gitignore  .npmrc  ACTUAL_ISSUES.md  ACTUAL_STATUS.md  ACTUAL_WELL_DATA_LOCATION.md  ADMIN_SETUP_SOLUTION.md  AGENTCORE_CHECKLIST.md  AGENTCORE_DEPLOYMENT_CHECKLIST.md  AGENTCORE_IMPLEMENTATION_COMPLETE.md  AGENTCORE_PERMISSION_FIX.md  AGENTCORE_UTILS_FIXED.md  AGENT_DATA_AWARENESS_COMPLETE_FIX.md  AGENT_DATA_AWARENESS_FINAL_RESOLUTION.md  ALGORITHM_INFO_BOX_READY_FOR_VALIDATION.md  ALL_FIXED_RUN_NOTEBOOK.md  ALL_SERVICES_ALIGNMENT_FIX.md  ALTERNATIVE_ADMIN_APPROACH.md  AMPLIFY_CONFIG_FIX_SUMMARY.md  AMPLIFY_CONSOLE_CREDENTIAL_SETUP.md  AMPLIFY_DEPLOYMENT_SOLUTION.md  AMPLIFY_TIMING_FIX_SUMMARY.md  API.ts  API_MIGRATION_COMPLETE.md  ARTIFACT_DISPLAY_FIX_SUMMARY.md  ARTIFACT_PARSING_FIX.md  AUDIT_CHECKLIST.md  AUTO_AGENT_QUICK_REFERENCE.md  AWS_CREDENTIALS_SETUP.md  AWS_PERMISSIONS_FIX_GUIDE.md  BOOTSTRAP_FINAL_ANALYSIS.md  BOOTSTRAP_ISSUE_ANALYSIS.md  CALLBACK_URL_FIX_SUMMARY.md  (+707 more)
EDIcraft-main/: .bedrock_agentcore.yaml  .dockerignore  .gitignore  Makefile  README.md  agent.py  config.py  mcp_servers.json  plot_combined.py  plot_coordinates.py  requirements.txt
amplify/: .ampxrc.json  backend.ts  tsconfig.json
cdk/: .gitignore  API_ROUTES.md  CHAT_API_TEST_RESULTS.md  COMPREHENSIVE_DELETION_FIX.md  (+95 more)
cdk.out/: EnergyInsights-development.assets.json  EnergyInsights-development.template.json  manifest.json  tree.json
(+3237 files in other folders)
