[project]
name = "mcp-well-data-server"
version = "1.0.0"
description = "MCP Server for Well Data Analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "boto3>=1.26.0"
]



[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"